<resources>
    <string name="app_name">CooList</string>
    <string name="action_settings">Settings</string>
    <string name="todo">ToDo</string>
    <string name="addlist">Add</string>
    <string name="err_add">Enter your item</string>
    <string name="undo">undo</string>
    <string name="remove">Remove Item</string>
    <string name="desc1">Move to Drag &amp; Drop(Long Press)</string>
    <string name="desc2">Remove to Swipe</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_item">Item</string>
    <string name="pref_fab">Float Action Button</string>

    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_color">Text Color</string>
    <string name="pref_background_color">Background Color</string>
    <string name="pref_button_color">Button Color</string>

    <string name="about_title">About</string>
    <string name="about_content">
        This App using OSS.\n\n
        com.google.code.gson:gson:2.7\n
        http://www.apache.org/licenses/LICENSE-2.0\n
    </string>

    <string-array name="pref_text_size_titles">
        <item>10sp</item>
        <item>12sp</item>
        <item>15sp</item>
        <item>17sp</item>
        <item>20sp</item>
        <item>22sp</item>
        <item>25sp</item>
        <item>27sp</item>
        <item>30sp</item>
        <item>35sp</item>
        <item>40sp</item>
    </string-array>

    <string-array name="pref_text_size_values">
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>17</item>
        <item>20</item>
        <item>22</item>
        <item>25</item>
        <item>27</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>

    <string-array name="pref_color_titles">
        <item>Black</item>
        <item>Gray</item>
        <item>Light Gray</item>
        <item>White</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Indigo</item>
        <item>Light Indigo</item>
        <item>Green</item>
        <item>Ligh Green</item>
        <item>Yellow</item>
        <item>Ligh Yellow</item>
        <item>Orange</item>
        <item>Light Orange</item>
        <item>Red</item>
        <item>Light Red</item>
    </string-array>

    <string-array name="pref_color_values">
        <item>#212121</item>
        <item>#757575</item>
        <item>#9E9E9E</item>
        <item>#FFFFFF</item>
        <item>#FF4081</item>
        <item>#0288D1</item>
        <item>#03A9F4</item>
        <item>#3F51B5</item>
        <item>#303F9F</item>
        <item>#689F38</item>
        <item>#8BC34A</item>
        <item>#FBC02D</item>
        <item>#FFEB3B</item>
        <item>#F57C00</item>
        <item>#FF9800</item>
        <item>#D32F2F</item>
        <item>#F44336</item>
    </string-array>

</resources>
