<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_item">
        <ListPreference
            android:defaultValue="20"
            android:entries="@array/pref_text_size_titles"
            android:entryValues="@array/pref_text_size_values"
            android:key="item_text_size_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_text_size"/>

        <ListPreference
            android:defaultValue="#757575"
            android:entries="@array/pref_color_titles"
            android:entryValues="@array/pref_color_values"
            android:key="item_text_color_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_text_color"/>

        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/pref_color_titles"
            android:entryValues="@array/pref_color_values"
            android:key="item_background_color_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_background_color"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_fab">
        <ListPreference
            android:defaultValue="#FF4081"
            android:entries="@array/pref_color_titles"
            android:entryValues="@array/pref_color_values"
            android:key="fab_color_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_button_color"/>
    </PreferenceCategory>

</PreferenceScreen>
